fix: conflict of bus and driver when create, update trip